// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineUser renders reliably 1`] = `
<View
  accessibilityHint="Navigates-to-user-profile"
  accessibilityLabel="User"
  accessibilityRole="link"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "display": "flex",
        },
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
        },
      ],
    ]
  }
  testID="InlineUser"
>
  <View
    style={
      Array [
        Array [
          Object {
            "marginRight": 7,
          },
        ],
      ]
    }
  >
    <mockUserIcon
      testID="mockUserIcon"
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Whitney-Medium",
        },
      ]
    }
  >
    @some_login
  </Text>
</View>
`;

exports[`InlineUser when offline renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile."
  accessibilityLabel="User @some_login"
  accessibilityRole="link"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "display": "flex",
        },
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
        },
      ],
    ]
  }
  testID="InlineUser"
>
  <View
    style={
      Array [
        Array [
          Object {
            "marginRight": 7,
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "#999999",
            "fontSize": 22,
          },
          undefined,
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      testID="InlineUser.NoInternetPicture"
    >
      
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Whitney-Medium",
        },
      ]
    }
  >
    @some_login
  </Text>
</View>
`;
